--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,10 @@
+:root {
+  --black: rgba(0, 0, 0, 0.84);
+  --gray: rgba(0, 0, 0, 0.54);
+  --light-gray: rgba(0, 0, 0, 0.15);
+  --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
+
 *,
 *::before,
 *::after {
@@ -9,4 +16,15 @@ body {
   margin: 0;
   padding: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+@media screen and (min-width: 320px) {
+  html {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  html {
+    font-size: 22px;
+  }
 }
