--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -45,32 +45,36 @@
 }
 
 .Header__animated-greeting {
-  position: relative;
+  position: absolute;
+  top: -80px;
   width: 100%;
   display: flex;
-  height: 50px;
+  height: 75px;
+  /* top: 0px; */
+
   justify-content: center;
+  text-align: center;
   align-items: center;
-  background: var(--light-gray);
+
+  background: #03a87c;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-transform: uppercase;
   letter-spacing: 5px;
-  top: -55px;
-  /* top: 0px; */
-  box-shadow: 0 5px 2px -2px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.1);
-  color: var(--gray);
-  z-index: -1;
+  box-shadow: 0 5px 2px -2px rgba(122, 150, 118, 0.3),
+    0 0 0 1px rgba(55, 182, 38, 0.1);
+  text-shadow: 0px 1px 0px rgba(62, 146, 87, 0.733);
+  color: rgb(187, 248, 171);
 }
 
 .Header__animated-greeting--show {
   animation: 3s slideOut cubic-bezier(0.075, 0.82, 0.165, 1);
-  animation-delay: 1.5s;
+  animation-delay: 1s;
 }
 
 @keyframes slideOut {
   0% {
-    top: -55px;
+    top: -80px;
   }
   40% {
     top: 0;
@@ -79,6 +83,6 @@
     top: 0;
   }
   100% {
-    top: -55px;
+    top: -80px;
   }
 }
