added logo to header and logo styles

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,6 +19,10 @@
   align-items: center;
 }
 
+.Header__logo {
+  height: 60px;
+}
+
 .Header__right {
   display: flex;
   justify-content: flex-end;
