--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -7,6 +7,8 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif, Courier, monospace,
     "Arial Narrow", Arial, sans-serif, "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  box-shadow: var(--box-shadow);
+  transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media (min-width: 992px) {
@@ -18,6 +20,10 @@
   .Post {
     max-width: 32%;
   }
+}
+
+.Post:hover {
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
 }
 
 .Post__image {
