--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -26,6 +26,29 @@
   margin-bottom: 5px;
 }
 
+.FullPost__buttons {
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+}
+
+.FullPost__button {
+  width: 50%;
+  background-color: white;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--gray);
+}
+
+.FullPost__button.FullPost__button--edit {
+  border-top-left-radius: 4px;
+}
+.FullPost__button.FullPost__button--delete {
+  border-top-right-radius: 4px;
+}
+
 .FullPost__body {
   font-family: Georgia, Cambria, Cochin, Times, "Times New Roman", serif;
   font-size: 1.05em;
@@ -42,3 +65,36 @@
   padding-top: 11px;
   padding-right: 8px;
 }
+
+/* .FullPost__buttons {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  position: fixed;
+  height: 200px;
+  width: 3rem;
+  bottom: 1.5rem;
+  right: 1.5rem;
+}
+
+.FullPost__button {
+  width: 3rem;
+  height: 3rem;
+  background: white;
+  border: none;
+  border-radius: 50%;
+  box-shadow: var(--box-shadow);
+  transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.FullPost__button:hover {
+  box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
+
+.FullPost__button--delete {
+  width: 2rem;
+  height: 2rem;
+} */
