--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -1,7 +1,6 @@
 .Post {
   width: 100%;
-  height: 600px;
-  border: 1px solid var(--light-gray);
+  height: 85vh;
   margin-bottom: 0.8rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif, Courier, monospace,
@@ -37,7 +36,7 @@
 }
 
 .Post__title {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   margin-bottom: 8px;
 }
 
