--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -4,3 +4,22 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.Posts__button {
+  position: fixed;
+  right: 35px;
+  bottom: 35px;
+  width: 3rem;
+  height: 3rem;
+  background: var(--white);
+  border: none;
+  border-radius: 50%;
+  box-shadow: var(--box-shadow);
+  transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+  cursor: pointer;
+}
+
+.Posts__button:hover {
+  box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
