--- a/src/components/Views/Login/Login.css
+++ b/src/components/Views/Login/Login.css
@@ -1,5 +1,5 @@
 .Login {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  z-index: 1111;
   background: white;
 }
 
