--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -10,12 +10,17 @@
 
 .Gallery__button {
   background: white;
-  border: 1px solid var(--gray);
+  border: 1px solid var(--light-gray);
   border-radius: 4px;
   padding: 20px;
   outline: none;
+  color: var(--light-gray);
+  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.Gallery__button:hover {
+  border-color: var(--gray);
   color: var(--gray);
-  transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .Gallery__button:focus {
@@ -31,6 +36,11 @@
 .Gallery__button--unsplash {
   grid-area: u;
   margin-left: 5px;
+}
+
+.Gallery__selected-mode {
+  border-color: var(--black);
+  color: var(--black);
 }
 
 .Gallery__display {
