--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -1,6 +1,6 @@
 .Post {
   width: 100%;
-  height: 85vh;
+  height: 25rem;
   margin-bottom: 0.8rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif, Courier, monospace,
@@ -36,7 +36,7 @@
 }
 
 .Post__title {
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-bottom: 8px;
 }
 
