--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -1,5 +1,11 @@
 .FullPost {
+  opacity: 0;
   margin-top: 15px;
+  transition: all 300ms linear;
+}
+
+.FullPost.fade-in {
+  opacity: 1;
 }
 
 .FullPost__title {
