checkpoint: finished adding feature - find users and follow them; fixed bug where sometimes editing a post wouldn't show up at all

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,6 +23,11 @@
   height: 55px;
 }
 
+.Header__search {
+  margin-left: 20px;
+  color: var(--gray);
+}
+
 .Header__right {
   display: flex;
   justify-content: flex-end;
