fixed bug where posts didn't come back ordered

--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 25rem;
   margin-bottom: 0.8rem;
+  margin-right: 0rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif, Courier, monospace,
     "Arial Narrow", Arial, sans-serif, "Lucida Sans Unicode", "Lucida Grande",
