--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -3,7 +3,7 @@
   margin-top: 25px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   transition: all 300ms linear;
 }
 
