--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 25rem;
   margin-bottom: 0.8rem;
-  margin-right: 0rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif, Courier, monospace,
     "Arial Narrow", Arial, sans-serif, "Lucida Sans Unicode", "Lucida Grande",
@@ -11,19 +10,21 @@
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .Post {
-    max-width: 49%;
+    max-width: 48%;
+    margin: 0 calc(4% / 4) 0.8rem;
   }
 }
 @media (min-width: 1200px) {
   .Post {
     max-width: 32%;
+    margin: 0 calc(4% / 6) 0.8rem;
   }
 }
 
 .Post:hover {
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .Post__image {
@@ -36,19 +37,39 @@
   padding: 5px 10px;
 }
 
+.Post__post-info {
+  display: flex;
+  align-items: center;
+  height: 1.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid var(--light-gray);
+  margin-bottom: 10px;
+}
+
+.Post__username {
+  font-size: 0.6rem;
+
+  font-weight: normal;
+  margin-right: 9px;
+}
+
+.Post__date::before {
+  content: "- ";
+}
+
+.Post__date {
+  font-size: 0.6rem;
+  text-transform: lowercase;
+  color: var(--gray);
+  font-weight: normal;
+  letter-spacing: 2px;
+}
+
 .Post__title {
   font-size: 1rem;
   margin-bottom: 8px;
 }
 
-.Post__date {
-  margin: 5px 0;
-  font-size: 0.6rem;
-  text-transform: uppercase;
-  color: var(--gray);
-  font-weight: normal;
-  letter-spacing: 2px;
-}
 .Post__body {
   font-size: 0.7rem;
   font-weight: normal;
@@ -56,8 +77,4 @@
   word-wrap: break-word;
   overflow: hidden;
   line-height: 1rem;
-}
-
-.Post__body::after {
-  content: "...";
 }
