--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -13,19 +13,21 @@
 
 .Posts__button {
   position: fixed;
-  right: 35px;
-  bottom: 35px;
+  right: 30px;
+  bottom: 30px;
   width: 3rem;
   height: 3rem;
-  background: var(--white);
+  background: white;
   border: none;
   border-radius: 50%;
-  box-shadow: var(--box-shadow);
+  /* box-shadow: var(--box-shadow); */
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 3px 8px 1px rgba(0, 0, 0, 0.1);
+
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
   cursor: pointer;
 }
 
 .Posts__button:hover {
-  box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.2), 0 15px 12px rgba(0, 0, 0, 0.1);
 }
