--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -9,20 +9,25 @@
 }
 
 .FullPost__title {
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: bolder;
   color: var(--black);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-bottom: 10px;
 }
 
 .FullPost__date {
   color: var(--gray);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: smaller;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 0.6rem;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  color: var(--gray);
+  font-weight: normal;
+  letter-spacing: 2px;
   margin-bottom: 20px;
 }
 
@@ -33,8 +38,11 @@
 
 .FullPost__buttons {
   width: 100%;
-  height: 2.5rem;
+  height: 2rem;
   display: flex;
+  font-size: 16px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .FullPost__button {
@@ -44,23 +52,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--gray);
-}
-
-.FullPost__button.FullPost__button--edit {
-  border-top-left-radius: 4px;
-}
-.FullPost__button.FullPost__button--delete {
-  border-top-right-radius: 4px;
+  /* border: 1px solid var(--gray); */
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.54);
+  border-bottom: none;
 }
 
 .FullPost__body {
   font-family: Georgia, Cambria, Cochin, Times, "Times New Roman", serif;
-  font-size: 1.05em;
+  font-size: 0.95em;
   line-height: 1.75em;
 }
 
-.FullPost__body::first-letter {
+/* .FullPost__body::first-letter {
   color: var(--gray);
   float: left;
   font-family: Georgia;
@@ -69,4 +72,35 @@
   line-height: 0.7em;
   padding-top: 11px;
   padding-right: 8px;
+} */
+
+.FullPost__footer {
+  position: sticky;
+  bottom: 0px;
+  left: 0;
+  width: 100%;
+  height: 44px;
+  margin: 10px 0;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 16px;
+  background-color: white;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.54);
+}
+
+.FullPost__footer .container {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.FullPost__likes {
+  display: flex;
+}
+
+.FullPost__like-symbol {
+  margin-right: 5px;
 }
