--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,6 +35,9 @@
 }
 
 .Header__greeting {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 0.7rem;
   text-align: right;
   display: none;
 }
@@ -46,6 +49,11 @@
 }
 
 .Header__button {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  letter-spacing: 2px;
   margin-left: 1rem;
   text-decoration: none;
   padding: 0.5rem 1rem;
