--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -1,28 +1,38 @@
 .FullPost {
   opacity: 0;
   margin-top: 15px;
-  transition: all 300ms linear;
+  transition: all 200ms linear;
 }
 
 .FullPost.fade-in {
   opacity: 1;
 }
 
+.FullPost__name {
+  font-size: 0.75rem;
+  font-weight: normal;
+  color: var(--gray);
+  margin-bottom: 10px;
+  border-left: 2px solid var(--light-gray);
+  padding-left: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 1px;
+}
+
 .FullPost__title {
   font-size: 1.8em;
   font-weight: bolder;
   color: var(--black);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-bottom: 10px;
 }
 
 .FullPost__date {
   color: var(--gray);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 0.6rem;
   text-transform: uppercase;
   color: var(--gray);
@@ -41,8 +51,9 @@
   height: 2rem;
   display: flex;
   font-size: 16px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  cursor: pointer;
 }
 
 .FullPost__button {
@@ -63,28 +74,15 @@
   line-height: 1.75em;
 }
 
-/* .FullPost__body::first-letter {
-  color: var(--gray);
-  float: left;
-  font-family: Georgia;
-  text-transform: uppercase;
-  font-size: 5.7em;
-  line-height: 0.7em;
-  padding-top: 11px;
-  padding-right: 8px;
-} */
-
 .FullPost__footer {
   position: sticky;
-  bottom: 0px;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 44px;
   margin: 10px 0;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   background-color: white;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.54);
@@ -93,12 +91,13 @@
 .FullPost__footer .container {
   height: 100%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
 .FullPost__likes {
+  width: 50%;
   display: flex;
+  justify-content: center;
 }
 
 .FullPost__like-symbol {
@@ -118,4 +117,10 @@
   66% {
     transform: rotate(-10deg);
   }
+}
+
+.FullPost__comments {
+  text-align: center;
+  width: 50%;
+  cursor: pointer;
 }
