--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -3,9 +3,7 @@
   height: 27rem;
   margin-bottom: 0.8rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif, Courier, monospace,
-    "Arial Narrow", Arial, sans-serif, "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   box-shadow: var(--box-shadow);
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
