--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -85,7 +85,9 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   background-color: white;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.54);
+  border: 1px solid var(--light-gray);
+  border-radius: 3px;
+  color: var(--gray);
 }
 
 .FullPost__footer .container {
