--- a/src/components/Gallery/UrlPhoto/UrlPhoto.css
+++ b/src/components/Gallery/UrlPhoto/UrlPhoto.css
@@ -1,5 +1,8 @@
 .UrlPhoto {
   grid-area: g;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 0.8rem;
 }
 
 .UrlPhoto__input {
@@ -15,5 +18,6 @@
 }
 
 .UrlPhoto__input:focus {
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  border: 1px solid white;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 8px 5px rgba(0, 0, 0, 0.05);
 }
