--- a/src/components/Views/Login/Login.css
+++ b/src/components/Views/Login/Login.css
@@ -4,43 +4,41 @@
   left: 0;
   width: 100%;
   height: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
-  /* z-index: 1111; */
   background: white;
 }
 
-/* .Login--hide {
-  animation: 0.5s fadeaway 1 forwards ease-in-out;
+.Login__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes fadeaway {
-  from {
-    background: white;
-    opacity: 100;
-  }
-
-  to {
-    background-color: rgba(255, 255, 255, 0);
-    opacity: 0;
-    z-index: -1;
-  }
-} */
+.Login__logo {
+  width: 50%;
+  margin-bottom: 20px;
+}
 
 .Login__button {
-  padding: 3rem 6rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  letter-spacing: 2px;
+  text-decoration: none;
+  padding: 1rem 2rem;
   border: 1px solid var(--light-gray);
   border-radius: 4px;
   color: var(--gray);
-  text-decoration: none;
-  box-shadow: var(--box-shadow);
-  transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .Login__button:hover {
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  border: 1px solid white;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.05);
 }
 
 .Login__button:active {
