--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -1,14 +1,27 @@
 .Posts {
   opacity: 0;
-  margin-top: 25px;
+  margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  transition: all 300ms linear;
+  transition: all 200ms linear;
 }
 
 .Posts.fade-in {
   opacity: 1;
+}
+
+.Posts__profile-name {
+  margin-top: 20px;
+  font-size: 0.75rem;
+  font-weight: normal;
+  color: var(--gray);
+  margin-bottom: 20px;
+  border-left: 2px solid var(--light-gray);
+  padding-left: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 1px;
 }
 
 .Posts__button {
