--- a/src/components/Views/Users/Users.css
+++ b/src/components/Views/Users/Users.css
@@ -13,7 +13,8 @@
 }
 
 .Users__input:focus {
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  border: 1px solid white;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 8px 5px rgba(0, 0, 0, 0.05);
 }
 
 .Users__users {
