--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -80,13 +80,14 @@
   left: 0;
   width: 100%;
   height: 44px;
-  margin: 10px 0;
+  margin: 0px 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   background-color: white;
   border: 1px solid var(--light-gray);
-  border-radius: 3px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
   color: var(--gray);
 }
 
