--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -43,7 +43,7 @@
 
 .FullPost__image {
   width: 100%;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
 
 .FullPost__buttons {
@@ -69,9 +69,9 @@
 }
 
 .FullPost__body {
-  font-family: Georgia, Cambria, Cochin, Times, "Times New Roman", serif;
-  font-size: 0.95em;
-  line-height: 1.75em;
+  /* font-family: Georgia, Cambria, Cochin, Times, "Times New Roman", serif;
+  font-size: 0.95em; */
+  margin: 0 0 10px;
 }
 
 .FullPost__footer {
