--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -69,7 +69,8 @@
 }
 
 .FullPost__body {
-  margin: 0 0 10px;
+  all: unset;
+  /* margin: 0 0 30px; */
 }
 
 .FullPost__footer {
@@ -78,7 +79,7 @@
   left: 0;
   width: 100%;
   height: 44px;
-  margin: 0px 0;
+  margin: 10px 0 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
