--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
 html,
