--- a/src/components/NewPost/NewPost.css
+++ b/src/components/NewPost/NewPost.css
@@ -38,18 +38,44 @@
   min-height: 15rem;
 }
 
-.NewPost__submit {
+.NewPost__buttons {
+  display: flex;
+}
+
+.NewPost__button {
+  flex: 1;
   background: white;
   border: 1px solid var(--gray);
   border-radius: 4px;
   padding: 20px;
   outline: none;
   color: var(--gray);
-  transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 100ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 10px;
+  letter-spacing: 2px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+  font-size: 0.75rem;
 }
 
-.NewPost__submit:focus {
+.NewPost__button--publish:hover,
+.NewPost__button--publish:focus {
   border: 1px solid var(--black);
   color: var(--black);
+}
+.NewPost__button--privacy:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 8px 5px rgba(0, 0, 0, 0.05);
+}
+.NewPost__button--privacy:active {
+  box-shadow: none;
+  transform: scale(0.98);
+}
+
+.NewPost__button.NewPost__button--privacy {
+  margin-right: 5px;
+}
+
+.NewPost__button.NewPost__button--publish {
+  margin-left: 5px;
 }
