--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -50,9 +50,6 @@
   width: 100%;
   height: 2rem;
   display: flex;
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   cursor: pointer;
 }
 
@@ -63,11 +60,33 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid var(--gray); */
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.54);
+  border: 1px solid var(--gray);
   border-bottom: none;
+  letter-spacing: 2px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+  transition: all 200ms linear;
+  font-size: 0.75rem;
 }
 
+.FullPost__button--edit {
+  border-top-right-radius: 0;
+  border-top-left-radius: 3px;
+  border-right: none;
+}
+.FullPost__button--edit:hover {
+  color: #ffb818;
+  border-color: #ffb818;
+}
+.FullPost__button--delete {
+  border-top-left-radius: 0;
+  border-top-right-radius: 3px;
+}
+.FullPost__button--delete:hover {
+  color: #f36767;
+  border-color: #f36767;
+}
 .FullPost__body {
   all: unset;
   /* margin: 0 0 30px; */
