--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -4,6 +4,7 @@
   margin-bottom: 0.8rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.2rem;
   box-shadow: var(--box-shadow);
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
