--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   z-index: 9999;
-  background: white;
+  background: var(--white);
 }
 
 .Error__code {
@@ -33,7 +33,7 @@
   font-size: 0.6rem;
   padding: 0.5rem 1rem;
   border-radius: 4px;
-  background: white;
+  background: var(--white);
   border: none;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 3px 8px 1px rgba(0, 0, 0, 0.1);
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
