--- a/src/components/FullPost/Comments/Comment/Comment.css
+++ b/src/components/FullPost/Comments/Comment/Comment.css
@@ -5,8 +5,7 @@
   padding: 15px 20px;
   width: 100%;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
-  border: 1px solid rgba(0, 0, 0, 0.09);
-  border-radius: 3px;
+  border: 1px solid var(--gray);
   letter-spacing: 1px;
 }
 
@@ -37,7 +36,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-top: 5px;
-  color: black;
+  color: var(--black);
 }
 
 .Comment__edit {
@@ -52,7 +51,7 @@
 }
 
 .Comment__edit:focus {
-  border: 1px solid white;
+  border: 1px solid var(--white);
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.05);
 }
 
