--- a/src/components/FullPost/Comments/Comments.css
+++ b/src/components/FullPost/Comments/Comments.css
@@ -16,7 +16,7 @@
 
 .Comments__none {
   width: 100%;
-  border: 1px solid var(--light-gray);
+  border: 1px solid var(--gray);
   border-radius: 3px;
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
@@ -36,6 +36,6 @@
 }
 
 .Comments__input:focus {
-  border: 1px solid white;
+  border: 1px solid var(--white);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 8px 5px rgba(0, 0, 0, 0.05);
 }
