--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -55,12 +55,13 @@
 
 .FullPost__button {
   width: 50%;
-  background-color: white;
+  background-color: var(--white);
+  color: var(--black);
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--gray);
+  border: 1px solid var(--black);
   border-bottom: none;
   letter-spacing: 2px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -78,18 +79,25 @@
 .FullPost__button--edit:hover {
   color: #ffb818;
   border-color: #ffb818;
+  border-right-width: 1px;
+  border-right-style: solid;
 }
 .FullPost__button--delete {
   border-top-left-radius: 0;
   border-top-right-radius: 3px;
+  border-left: none;
 }
 .FullPost__button--delete:hover {
   color: #f36767;
   border-color: #f36767;
+  border-left-width: 1px;
+  border-left-style: solid;
 }
 .FullPost__body {
   all: unset;
   /* margin: 0 0 30px; */
+  background-color: var(--white);
+  color: var(--black);
 }
 
 .FullPost__footer {
@@ -102,8 +110,8 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
-  background-color: white;
-  border: 1px solid var(--light-gray);
+  background-color: var(--white);
+  border: 1px solid var(--gray);
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   color: var(--gray);
