--- a/src/components/Gallery/Unsplash/Unsplash.css
+++ b/src/components/Gallery/Unsplash/Unsplash.css
@@ -19,7 +19,7 @@
 .Unsplash__random {
   margin-top: 10px;
   margin-left: 10px;
-  background-color: white;
+  background-color: var(--white);
   border: 1px solid var(--light-gray);
   border-radius: 3px;
   transition: all 100ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -30,7 +30,7 @@
 }
 
 .Unsplash__random:hover {
-  border: 1px solid white;
+  border: 1px solid var(--white);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 8px 5px rgba(0, 0, 0, 0.05);
 }
 .Unsplash__random:active {
@@ -52,7 +52,7 @@
 }
 
 .Unsplash__input:focus {
-  border: 1px solid white;
+  border: 1px solid var(--white);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 8px 5px rgba(0, 0, 0, 0.05);
 }
 
@@ -70,7 +70,7 @@
 .Unsplash__button {
   height: 150px;
   width: 50px;
-  background-color: white;
+  background-color: var(--white);
   border: 1px solid var(--light-gray);
   transition: all 100ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
@@ -83,7 +83,7 @@
 }
 
 .Unsplash__mini-image {
-  background: black;
+  background: var(--black);
   width: 20%;
   flex: 1;
   height: 150px;
