--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 75px;
 
-  background: white;
+  background: var(--white);
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 }
 
@@ -21,6 +21,7 @@
 
 .Header__logo {
   height: 55px;
+  color: var(--black);
 }
 
 .Header__search {
