--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -7,6 +7,7 @@
   line-height: 1.2rem;
   box-shadow: var(--box-shadow);
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: var(--white);
 }
 
 @media (min-width: 768px) {
