--- a/src/components/Views/NotFound/NotFound.css
+++ b/src/components/Views/NotFound/NotFound.css
@@ -22,7 +22,7 @@
   font-size: 0.6rem;
   padding: 0.5rem 1rem;
   border-radius: 4px;
-  background: white;
+  background: var(--white);
   border: none;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2), 0 3px 8px 1px rgba(0, 0, 0, 0.1);
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
