--- a/src/components/Views/Users/Users.css
+++ b/src/components/Views/Users/Users.css
@@ -13,7 +13,7 @@
 }
 
 .Users__input:focus {
-  border: 1px solid white;
+  border: 1px solid var(--white);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 8px 5px rgba(0, 0, 0, 0.05);
 }
 
