--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -21,11 +21,18 @@
 }
 
 .FullPost__title {
-  font-size: 1.8em;
+  font-size: 1.8rem;
   font-weight: bolder;
   color: var(--black);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 10px;
+}
+.FullPost__subtitle {
+  font-size: 1rem;
+  color: var(--black);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   margin-bottom: 10px;
 }
 
