--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -1,6 +1,6 @@
 .Post {
   width: 100%;
-  height: 20rem;
+  height: 22rem;
   margin-bottom: 0.8rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -70,7 +70,7 @@
   margin-bottom: 8px;
 }
 
-.Post__body {
+.Post__subtitle {
   font-size: 0.7rem;
   font-weight: normal;
   text-overflow: ellipsis;
