--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,17 @@
 .Header {
   width: 100%;
   height: 75px;
-
   background: var(--white);
-  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  z-index: 1111;
+  /* box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08); */
+  box-shadow: 0 2px 10px var(--highlight);
+}
+
+@media (min-width: 768px) {
+  .Header {
+    position: fixed;
+    top: 0;
+  }
 }
 
 .Header__container {
@@ -81,15 +89,14 @@
   text-align: center;
   align-items: center;
 
-  background: #03a87c;
+  background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-transform: uppercase;
   letter-spacing: 5px;
   box-shadow: 0 5px 2px -2px rgba(122, 150, 118, 0.3),
     0 0 0 1px rgba(55, 182, 38, 0.1);
-  text-shadow: 0px 1px 0px rgba(62, 146, 87, 0.733);
-  color: rgb(187, 248, 171);
+  color: var(--white);
 }
 
 .Header__animated-greeting--show {
