--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,7 @@
   --gray: rgba(0, 0, 0, 0.54);
   --light-gray: rgba(0, 0, 0, 0.15);
   --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  --highlight: rgba(107, 232, 209, 0.7);
 }
 
 ::selection {
@@ -32,6 +33,12 @@ body {
 
 body {
   background-color: var(--white);
+}
+
+@media (min-width: 768px) {
+  body {
+    padding-top: 75px;
+  }
 }
 
 @media screen and (min-width: 320px) {
