--- a/src/components/Views/UserProfile/UserProfile.css
+++ b/src/components/Views/UserProfile/UserProfile.css
@@ -1,21 +1,42 @@
 .UserProfile {
-  height: 120px;
   opacity: 0;
   transition: all 200ms linear;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid var(--light-gray);
 }
 
+@media (min-width: 992px) {
+  .UserProfile {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 .UserProfile__main {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
+}
+
+@media (min-width: 992px) {
+  .UserProfile__main {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+.UserProfile__main > input {
+  margin: 0 auto;
 }
 
 .UserProfile.fade-in {
@@ -25,19 +46,100 @@
 
 .UserProfile__profile-photo {
   border-radius: 50%;
-  width: 75px;
-  margin-top: 5px;
-  margin-right: 20px;
+  width: 100px;
+}
+
+@media (min-width: 992px) {
+  .UserProfile__profile-photo {
+    margin-top: 5px;
+    margin-right: 20px;
+  }
+}
+
+.UserProfile__text {
+  margin: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 992px) {
+  .UserProfile__text {
+    margin: 0;
+    align-items: flex-start;
+    text-align: left;
+  }
 }
 
 .UserProfile__name {
   font-size: 1rem;
+  margin-bottom: 5px;
+}
+
+@media (min-width: 992px) {
+  .UserProfile__name {
+    margin-bottom: 5px;
+  }
+}
+
+.UserProfile__name--editing {
+  margin-bottom: 10px;
 }
 
 .UserProfile__about {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 0.7rem;
+  text-align: center;
   color: var(--gray);
-  width: 50%;
+  width: 100%;
+  line-height: 1.15rem;
+}
+
+@media (min-width: 992px) {
+  .UserProfile__about {
+    width: 50%;
+    text-align: left;
+  }
+}
+
+.UserProfile__input {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 0.7rem;
+  width: 500px;
+  height: 200px;
+  border: 1px solid var(--light-gray);
+  border-radius: 3px;
+  transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+  padding: 20px;
+  line-height: 1.15rem;
+  resize: none;
+}
+
+.UserProfile__input:focus {
+  border: 1px solid var(--white);
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.05);
+}
+
+.UserProfile__button {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  letter-spacing: 2px;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border: 1px solid var(--gray);
+  color: var(--gray);
+  transition: all 0.2s ease-in;
+  background-color: white;
+  outline: none;
+}
+
+.UserProfile__button:hover {
+  border: 1px solid var(--black);
+  color: var(--black);
 }
