--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
+
 :root {
   /* --white: rgba(0, 0, 0, 0.8);
   --black: rgba(255, 255, 255, 0.789);
