--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -4,6 +4,8 @@
   transition: all 200ms linear;
   display: flex;
   flex-direction: column;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .FullPost.fade-in {
@@ -42,8 +44,6 @@
   font-weight: normal;
   color: var(--gray);
   margin-bottom: 5px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   letter-spacing: 1px;
 }
 
@@ -51,27 +51,22 @@
   font-size: 1.8rem;
   font-weight: bolder;
   color: var(--black);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-bottom: 10px;
 }
 .FullPost__subtitle {
   font-size: 1rem;
   color: var(--black);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+
   margin-bottom: 10px;
 }
 
 .FullPost__date {
   color: var(--gray);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 0.7rem;
-  text-transform: uppercase;
+  text-transform: lowercase;
   color: var(--gray);
   font-weight: normal;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   margin-bottom: 20px;
 }
 
@@ -109,8 +104,6 @@
   border: 1px solid var(--black);
   border-bottom: none;
   letter-spacing: 2px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-transform: uppercase;
   transition: all 200ms linear;
   font-size: 0.75rem;
@@ -152,8 +145,6 @@
   width: 100%;
   height: 44px;
   margin: 10px 0 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   background-color: var(--white);
   border: 1px solid var(--gray);
@@ -177,7 +168,6 @@
 .FullPost__like-symbol {
   margin-right: 5px;
   cursor: pointer;
-  /* transition: all 100ms cubic-bezier(0.165, 0.84, 0.44, 1) infinite; */
 }
 
 .FullPost__like-symbol:hover {
