--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   background: var(--white);
   z-index: 1111;
   /* box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08); */
-  box-shadow: 0 2px 10px var(--highlight);
+  box-shadow: 0 3px 0 var(--highlight);
 }
 
 @media (min-width: 768px) {
