--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -1,7 +1,6 @@
 .Post {
   width: 100%;
-  height: 26rem;
-  margin-bottom: 3px;
+  /* height: 26rem; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.2rem;
@@ -12,17 +11,27 @@
 
 @media (min-width: 768px) {
   .Post {
+    /* height: 22rem; */
+    /* max-width: 48%; */
+    /* margin: 0 calc(2% / 4) 1rem; */
+  }
+  /* .Post {
     height: 22rem;
     max-width: 49%;
     margin: 0 calc(2% / 4) 3px;
-  }
+  } */
 }
 @media (min-width: 1200px) {
   .Post {
+    /* height: 21rem; */
+    /* max-width: 32%; */
+    /* margin: 0 calc(1% / 6) 1rem; */
+  }
+  /* .Post {
     height: 21rem;
     max-width: 33%;
     margin: 0 calc(1% / 6) 3px;
-  }
+  } */
 }
 
 .Post:hover {
