--- a/src/components/Views/Login/Login.css
+++ b/src/components/Views/Login/Login.css
@@ -43,8 +43,13 @@
   transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.Login__button:hover {
-  border: 1px solid var(--white);
+.Login__button:hover,
+.Login__button:focus {
+  background: var(--highlight);
+  /* border: 1px solid var(--white); */
+  border: 1px solid var(--highlight);
+  color: var(--white);
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.05);
 }
 
