changed default font to roboto, fixed bug where posts would not load correctly, changed height for posts to auto-flow using css-grid

--- a/src/components/Gallery/Giphy/Giphy.css
+++ b/src/components/Gallery/Giphy/Giphy.css
@@ -1,8 +1,9 @@
 .Giphy {
   grid-area: g;
   text-decoration: none;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+
   font-size: 0.8rem;
 }
 
