--- a/src/components/EditPost/EditPost.css
+++ b/src/components/EditPost/EditPost.css
@@ -11,8 +11,8 @@
   margin-bottom: 20px;
   border-left: 2px solid var(--light-gray);
   padding-left: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   letter-spacing: 1px;
 }
 
@@ -23,8 +23,8 @@
   outline: none;
   margin-bottom: 10px;
   padding: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .EditPost__input:focus {
@@ -57,8 +57,9 @@
   transition: all 100ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 10px;
   letter-spacing: 2px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+
   text-transform: uppercase;
   font-size: 0.75rem;
 }
