--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -16,8 +16,8 @@
   text-align: center;
   font-size: 2rem;
   font-weight: bolder;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   margin-bottom: 10px;
 }
 
@@ -30,8 +30,9 @@
   color: var(--gray);
   text-decoration: none;
   text-transform: uppercase;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+
   letter-spacing: 2px;
   font-size: 0.6rem;
   padding: 0.5rem 1rem;
