--- a/src/components/FullPost/Comments/Comment/Comment.css
+++ b/src/components/FullPost/Comments/Comment/Comment.css
@@ -33,8 +33,8 @@
 .Comment__body {
   font-size: 0.85rem;
   letter-spacing: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   margin-top: 5px;
   color: var(--black);
 }
