--- a/src/components/Gallery/UrlPhoto/UrlPhoto.css
+++ b/src/components/Gallery/UrlPhoto/UrlPhoto.css
@@ -1,7 +1,8 @@
 .UrlPhoto {
   grid-area: g;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+
   font-size: 0.8rem;
 }
 
