--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -50,8 +50,9 @@
 }
 
 .Header__greeting {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+
   font-size: 0.7rem;
   text-align: right;
 }
@@ -63,8 +64,8 @@
 }
 
 .Header__button {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   text-transform: uppercase;
   font-size: 0.7rem;
   letter-spacing: 2px;
@@ -100,8 +101,8 @@
   align-items: center;
 
   background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   text-transform: uppercase;
   letter-spacing: 5px;
   box-shadow: 0 5px 2px -2px rgba(122, 150, 118, 0.3),
