--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -3,7 +3,7 @@
   margin-top: 20px;
   display: grid;
   grid-gap: 0.7rem;
-  grid: auto-flow 26rem / 1fr;
+  grid: auto-flow / 1fr;
   /* flex-wrap: wrap; */
   /* justify-content: space-between; */
   transition: all 200ms linear;
@@ -11,13 +11,13 @@
 
 @media (min-width: 768px) {
   .Posts {
-    grid: auto-flow 22rem / 1fr 1fr;
+    grid: auto-flow / 1fr 1fr;
   }
 }
 
 @media (min-width: 1200px) {
   .Posts {
-    grid: auto-flow 21rem / 1fr 1fr 1fr;
+    grid: auto-flow / 1fr 1fr 1fr;
   }
 }
 
@@ -28,8 +28,8 @@
 .Posts__no-posts {
   margin-top: 20vh;
   text-align: center;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .Posts__profile-name {
@@ -40,8 +40,8 @@
   margin-bottom: 20px;
   border-left: 2px solid var(--light-gray);
   padding-left: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   letter-spacing: 1px;
 }
 
