--- a/src/components/Views/Login/Login.css
+++ b/src/components/Views/Login/Login.css
@@ -9,8 +9,8 @@
   align-items: center;
   background: var(--white);
   z-index: 2222;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .Login__body {
