--- a/src/components/Views/UserProfile/FollowButton/FollowButton.css
+++ b/src/components/Views/UserProfile/FollowButton/FollowButton.css
@@ -1,6 +1,6 @@
 .FollowButton {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   text-transform: uppercase;
   font-size: 0.7rem;
   letter-spacing: 2px;
