--- a/src/components/Views/UserProfile/UserProfile.css
+++ b/src/components/Views/UserProfile/UserProfile.css
@@ -1,8 +1,8 @@
 .UserProfile {
   opacity: 0;
   transition: all 200ms linear;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -58,8 +58,8 @@
 .UserProfile__uploader {
   overflow: hidden;
   position: relative;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   text-transform: uppercase;
   font-size: 0.7rem;
   letter-spacing: 2px;
@@ -142,8 +142,8 @@
 }
 
 .UserProfile__about {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   font-size: 0.7rem;
   text-align: center;
   color: var(--gray);
@@ -159,8 +159,8 @@
 }
 
 .UserProfile__input {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   font-size: 0.7rem;
   width: 100%;
   height: 5.75rem;
@@ -187,8 +187,8 @@
 }
 
 .UserProfile__button {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   text-transform: uppercase;
   font-size: 0.7rem;
   letter-spacing: 2px;
