--- a/src/components/Views/Users/User/User.css
+++ b/src/components/Views/Users/User/User.css
@@ -8,8 +8,8 @@
   color: var(--black);
   margin-bottom: 10px;
   font-size: 0.9rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .User__username {
